fix css problem when back from youtube & align center title newLovedone

--- a/src/app/auth/components/new-lovedone/new-lovedone.scss
+++ b/src/app/auth/components/new-lovedone/new-lovedone.scss
@@ -13,4 +13,8 @@ prisma-new-lovedone{
     margin-bottom: 2.5em;
   }
 
+  .toolbar-content{
+    text-align: center;
+  }
+
 }
